@@ -1,11 +1,13 @@
 package edu.seu.app;
 
 import edu.seu.security.*;
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
 
+import java.io.IOException;
 import java.math.BigInteger;
 import java.security.SecureRandom;
 import java.util.Arrays;
-import java.util.Base64;
 
 /**
  *安全函数应用类
@@ -16,15 +18,16 @@ import java.util.Base64;
 public class SecurityUtil {
     private String symEncAlg;
     private String symKeySeed;
+    private int blockLen;
     private String hashAlg;
     private String rsaKeySize1;
     private String rsaKeySize2;
     private byte[] symKey;
     private RSAKey.KeyPair rsaKey1;
     private RSAKey.KeyPair rsaKey2;
-    final Base64.Decoder decoder = Base64.getDecoder();
-    final Base64.Encoder encoder = Base64.getEncoder();
-    public String senderMessage;
+    final BASE64Decoder decoder = new BASE64Decoder();
+    final BASE64Encoder encoder = new BASE64Encoder();
+    public String senderMessage = "";
 
     public SecurityUtil(String symEncAlg, String symKeySeed,
                         String hashAlg, String rsaKeySize1, String rsaKeySize2) {
@@ -51,8 +54,10 @@ public class SecurityUtil {
     private void initialize() {
         if (symEncAlg.equals("DES")) {
             symKey = generateSymKey(symKeySeed, 8);
+            blockLen = 8;
         } else {
             symKey = generateSymKey(symKeySeed, 16);
+            blockLen = 16;
         }
         rsaKey1 = new RSAKey(Integer.parseInt(rsaKeySize1)).generateKeyPair();
         rsaKey2 = new RSAKey(Integer.parseInt(rsaKeySize2)).generateKeyPair();
@@ -66,7 +71,7 @@ public class SecurityUtil {
     public String getParameterInfo(int user) {
         StringBuilder builder = new StringBuilder();
         builder.append("对称加密算法：" + symEncAlg + "\n");
-        builder.append("对称加密密钥：" + encoder.encodeToString(symKey) + "\n");
+        builder.append("对称加密密钥：" + encoder.encode(symKey) + "\n");
         builder.append("Hash算法：" + hashAlg + "\n");
         if (user == 1) {
             builder.append("RSA算法公钥(n,e)：(" + rsaKey1.getPublicKey().getModule() + rsaKey1.getPublicKey().getPublicExponent() + ")\n");
@@ -108,11 +113,11 @@ public class SecurityUtil {
     /**
      * 对称加密
      */
-    public byte[] symEnc(byte[] m, byte[] symKey) {
+    private byte[] symEnc(byte[] m, byte[] symKey) {
         if (symEncAlg.equals("DES")) {
             return new DES(symKey).encrypt(m);
         } else {
-            return new DES(symKey).encrypt(m);
+            return new AES(symKey).encrypt(m);
         }
     }
 
@@ -133,8 +138,18 @@ public class SecurityUtil {
     public String sendProcess(String m) {
         byte[] msg = m.getBytes();
         byte[] digest = getDigest(msg);
-        byte[] signature = new RSA(3, rsaKey1.getPrivateKey()).process(digest);
-        byte[] ukedKey = new RSA(1, rsaKey2.getPublicKey()).process(symKey);
+        byte[] signature = new byte[0];
+        try {
+            signature = new RSA(3, rsaKey1.getPrivateKey()).process(digest);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        byte[] ukedKey = new byte[0];
+        try {
+            ukedKey = new RSA(1, rsaKey2.getPublicKey()).process(symKey);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
         byte[] t = new byte[msg.length + signature.length];
         System.arraycopy(msg, 0, t, 0, msg.length);
         System.arraycopy(signature, 0, t, msg.length, signature.length);
@@ -142,7 +157,7 @@ public class SecurityUtil {
         byte[] out = new byte[encrypted.length + ukedKey.length];
         System.arraycopy(encrypted, 0, out, 0, encrypted.length);
         System.arraycopy(ukedKey, 0, out, encrypted.length, ukedKey.length);
-        senderMessage = encoder.encodeToString(out);
+        senderMessage = encoder.encode(out);
         return senderMessage;
     }
 
@@ -152,11 +167,76 @@ public class SecurityUtil {
      * @return
      */
     public String receiverDecrypt(String s) {
-        byte[] c = decoder.decode(s);
+        if (s.equals("")) {
+            return "没有接收到任何消息！\n";
+        }
+        byte[] c = new byte[0];
+        try {
+            c = decoder.decodeBuffer(s);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
         byte[] ukedKey = new byte[getByteLength(rsaKey2.getPrivateKey().getModule())];
+        if (c.length < ukedKey.length) {
+            return "消息遭到篡改，无法解密!\n";
+        }
         System.arraycopy(c, c.length - ukedKey.length, ukedKey, 0, ukedKey.length);
-        byte[] sessionKey = new RSA(2, rsaKey2.getPrivateKey()).process(ukedKey);
+        byte[] sessionKey = new byte[0];
+        try {
+            sessionKey = new RSA(2, rsaKey2.getPrivateKey()).process(ukedKey);
+        } catch (Exception e) {
+            return "消息遭到篡改，无法解密!\n";
+        }
         byte[] t = new byte[c.length - ukedKey.length];
+        if (t.length % blockLen != 0) {
+            return "消息遭到篡改，无法解密!\n";
+        }
+        System.arraycopy(c, 0, t, 0, t.length);
+        byte[] decrypted = symDec(t);
+        byte[] signature = new byte[getByteLength(rsaKey1.getPublicKey().getModule())];
+        System.arraycopy(decrypted, decrypted.length - signature.length, signature, 0, signature.length);
+        byte[] digest = new byte[0];
+        try {
+            digest = new RSA(4, rsaKey1.getPublicKey()).process(signature);
+        } catch (Exception e) {
+            return "消息遭到篡改，无法解密!\n";
+        }
+        byte[] m = new byte[decrypted.length - signature.length];
+        System.arraycopy(decrypted, 0, m, 0, m.length);
+
+        StringBuilder builder = new StringBuilder();
+        builder.append("解密得会话密钥：" + encoder.encode(sessionKey) + "\n");
+        builder.append("解密得数字签名：" + encoder.encode(signature) + "\n");
+        builder.append("解密得消息摘要：" + encoder.encode(digest) + "\n");
+        builder.append("解密得明文：" + new String(m) + "\n");
+        return builder.toString();
+    }
+
+    public String receiverVerify(String s) {
+        if (s.equals("")) {
+            return "没有接收到任何消息！\n";
+        }
+        byte[] c = new byte[0];
+        try {
+            c = decoder.decodeBuffer(s);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        byte[] ukedKey = new byte[getByteLength(rsaKey2.getPrivateKey().getModule())];
+        if (c.length < ukedKey.length) {
+            return "认证失败，消息遭到篡改！\n";
+        }
+        System.arraycopy(c, c.length - ukedKey.length, ukedKey, 0, ukedKey.length);
+        byte[] sessionKey = new byte[0];
+        try {
+            sessionKey = new RSA(2, rsaKey2.getPrivateKey()).process(ukedKey);
+        } catch (Exception e) {
+            return "认证失败，消息遭到篡改！\n";
+        }
+        byte[] t = new byte[c.length - ukedKey.length];
+        if (t.length % blockLen != 0) {
+            return "认证失败，消息遭到篡改！\n";
+        }
         System.arraycopy(c, 0, t, 0, t.length);
         byte[] decrypted;
         if (sessionKey.length == 8) {
@@ -166,53 +246,31 @@ public class SecurityUtil {
         }
         byte[] signature = new byte[getByteLength(rsaKey1.getPublicKey().getModule())];
         System.arraycopy(decrypted, decrypted.length - signature.length, signature, 0, signature.length);
-        byte[] digest = new RSA(4, rsaKey1.getPublicKey()).process(signature);
+        byte[] digest = new byte[0];
+        try {
+            digest = new RSA(4, rsaKey1.getPublicKey()).process(signature);
+        } catch (Exception e) {
+            return "认证失败，消息遭到篡改！";
+        }
         byte[] m = new byte[decrypted.length - signature.length];
         System.arraycopy(decrypted, 0, m, 0, m.length);
-
-        StringBuilder builder = new StringBuilder();
-        builder.append("解密得会话密钥：" + encoder.encodeToString(sessionKey) + "\n");
-        builder.append("解密得数字签名：" + encoder.encodeToString(signature) + "\n");
-        builder.append("解密得消息摘要：" + encoder.encodeToString(digest) + "\n");
-        builder.append("解密得明文：" + new String(m) + "\n");
-        return builder.toString();
-    }
-
-    public boolean receiverVerify(String s) {
-        byte[] c = decoder.decode(s);
-        byte[] ukedKey = new byte[getByteLength(rsaKey2.getPrivateKey().getModule())];
-        System.arraycopy(c, c.length - ukedKey.length, ukedKey, 0, ukedKey.length);
-        byte[] sessionKey = new RSA(2, rsaKey2.getPrivateKey()).process(ukedKey);
-        byte[] t = new byte[c.length - ukedKey.length];
-        System.arraycopy(c, 0, t, 0, t.length);
-        byte[] decrypted;
-        if (sessionKey.length == 8) {
-            decrypted = new DES(sessionKey).decrypt(t);
-        } else {
-            decrypted = new AES(sessionKey).decrypt(t);
-        }
-        int digestLen;
-        if (hashAlg.equals("MD5")) {
-            digestLen = MD5.MD5_LENGTH;
-        } else if (hashAlg.equals("SHA224")) {
-            digestLen = SHA2.SHA224_LENGTH;
-        } else if (hashAlg.equals("SHA256")) {
-            digestLen = SHA2.SHA256_LENGTH;
-        } else if (hashAlg.equals("SHA384")) {
-            digestLen = SHA5.SHA384_LENGTH;
-        } else {
-            digestLen = SHA5.SHA512_LENGTH;
-        }
-        byte[] digest = new byte[digestLen];
-        System.arraycopy(decrypted, decrypted.length - digestLen, digest, 0, digestLen);
-        byte[] m = new byte[decrypted.length - digestLen];
-        System.arraycopy(decrypted, 0, m, 0, m.length);
         byte[] mdigest = getDigest(m);
-        return Arrays.equals(digest, mdigest);
+        if (Arrays.equals(digest, mdigest)) {
+            return "认证通过，消息没有遭到篡改！\n";
+        } else {
+            return "认证失败，消息遭到篡改！\n";
+        }
     }
 
     private int getByteLength(BigInteger bi) {
         int bitLen = bi.bitLength();
         return (bitLen + 7) >> 3;
+    }
+
+    private static void printByteArray(byte[] array) {
+        for (int i = 0; i < array.length; i++) {
+            System.out.print("0x" + Integer.toHexString(array[i] & 0xFF) + " ");
+        }
+        System.out.println();
     }
 }
